fixed a minor alignment issue in .grid and .grid-item using .gi-left and .gi-right

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -216,6 +216,14 @@ h1, h2, h3, h4, h5 {
 	margin-top: 20px;
 }
 
+.gi-left {
+margin-right: 40px;
+}
+
+.gi-right {
+margin-left: 40px;
+}
+
 .facts {
 	display: flex;
 	margin-top: 50px;
